Primera implementación de refactor a entrega1